--- a/index.html
+++ b/index.html
@@ -12,18 +12,7 @@
 <body>
 
   <section class="container">
-    <div class="time">
-
-      <div class="container-time">
-        <h1 id="hora">00 : 00 : 00</h1>
-      </div>
-
-    </div>
-    <div class="control">
-      <button id="start">Iniciar</button>
-      <button id="stop">Parar</button>
-      <button id="reset">Resetar</button>
-    </div>
+    <h1>Lista de Tarefas</h1>
   </section>
 
   <script src="./assets/js/main.js"></script>
